# json-voorhees

./: .gitignore  .hgignore  .hgtags  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.rst  Makefile  README.md  Serialization_1_01Enum_01Adapter-example.html  VERSIONS.md  _2home_2travis_2build_2tgockel_2json-voorhees_2include_2jsonv_2parse_8hpp-example.html  _2home_2travis_2build_2tgockel_2json-voorhees_2include_2jsonv_2serialization_util_8hpp-example.html  _formulas.tex  algorithm_8hpp.html  algorithm_8hpp.js  algorithm_8hpp_source.html  all_8hpp.html  all_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  appveyor.yml  array_8cpp.html  array_8cpp.js  array_8cpp_source.html  array_8hpp.html  array_8hpp_source.html  basic__view_8hpp.html  basic__view_8hpp_source.html  char__convert_8cpp.html  char__convert_8cpp.js  char__convert_8cpp_source.html  char__convert_8hpp.html  char__convert_8hpp.js  char__convert_8hpp_source.html  classes.html  classjsonv_1_1adapter-members.html  classjsonv_1_1adapter.html  classjsonv_1_1adapter__builder-members.html  (+440 more)
config/: Doxyfile  dev-env  make-package  make-packages  publish-doxygen  run-tests  version
debian/: changelog  control  libjsonv-dev.dirs  libjsonv-dev.install  libjsonv1.4.0.dirs  libjsonv1.4.0.install
doc/: Dockerfile  conversions.dot
include/json-voorhees/: all.hpp  array.hpp  config.hpp  forward.hpp  object.hpp  parse.hpp  standard.hpp  value.hpp
include/jsonv/: algorithm.hpp  all.hpp  array.hpp  ast.hpp  coerce.hpp  config.hpp  demangle.hpp  encode.hpp  forward.hpp  kind.hpp  object.hpp  optional.hpp  parse.hpp  parse_index.hpp  path.hpp  reader.hpp  result.hpp  serialization.hpp  serialization_boost.hpp  serialization_builder.hpp  serialization_optional.hpp  serialization_util.hpp  standard.hpp  string_ref.hpp  string_view.hpp  tokenizer.hpp  util.hpp  value.hpp  version.hpp
installer/rpm/: jsonv.spec.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6a.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+122 more)
src/json-benchmark/: jq_benchmark.cpp  jsonv_benchmark.cpp  main.cpp
src/json-voorhees/: array.cpp  char_convert.cpp  char_convert.hpp  detail.cpp  detail.hpp  object.cpp  parse.cpp  standard.cpp  value.cpp
src/json-voorhees-tests/: char_convert.cpp  main.cpp  parse.cpp
src/jsonv/: algorithm_compare.cpp  algorithm_diff.cpp  algorithm_map.cpp  algorithm_merge.cpp  algorithm_traverse.cpp  algorithm_validate.cpp  array.cpp  array.hpp  array_impl.cpp  array_impl.hpp  ast.cpp  char_convert.cpp  char_convert.hpp  coerce.cpp  demangle.cpp  detail.cpp  detail.hpp  encode.cpp  kind.cpp  object.cpp  object.hpp  object_impl.cpp  object_impl.hpp  parse.cpp  parse_index.cpp  path.cpp  reader.cpp  reader_impl.cpp  reader_impl.hpp  reader_impl_parse_index.cpp  reader_impl_parse_index.hpp  result.cpp  serialization.cpp  serialization_builder.cpp  standard.cpp  string_impl.cpp  string_impl.hpp  tokenizer.cpp  util.cpp  value.cpp  (+1 more)
src/jsonv-tests/: algorithm_diff_tests.cpp  algorithm_map_tests.cpp  algorithm_merge_tests.cpp  algorithm_validate_tests.cpp  array.cpp  array_tests.cpp  benchmark_tests.cpp  char_convert.cpp  char_convert_tests.cpp  coerce_tests.cpp  encode_tests.cpp  filesystem_util.cpp  filesystem_util.hpp  json_checker.cpp  main.cpp  merge_tests.cpp  object.cpp  object_tests.cpp  parse.cpp  parse_blns.cpp  parse_index_tests.cpp  parse_tests.cpp  path_tests.cpp  pull_parser_tests.cpp  pull_parser_tests.hpp  reader_tests.cpp  result_tests.cpp  serialization_builder_tests.cpp  serialization_tests.cpp  standard.cpp  string.cpp  string_tests.cpp  test.cpp  test.hpp  tokenizer_tests.cpp  unicode.cpp  unicode_tests.cpp  util_diff_tests.cpp  util_merge_tests.cpp  value.cpp  (+1 more)
tests/json-voorhees/: array.cpp  main.cpp  object.cpp  parse.cpp  standard.cpp  string.cpp  test.cpp  test.hpp  unicode.cpp  value.cpp
version/: index.html
version/1.1.0/: algorithm_8hpp.html  algorithm_8hpp.js  basic__view_8hpp_source.html  classjsonv_1_1adapter__builder.html  classjsonv_1_1adapter__for.html  classjsonv_1_1container__adapter.html  classjsonv_1_1container__adapter_3_01optional_3_01T_01_4_01_4.html  classjsonv_1_1container__adapter_3_01optional_3_01T_01_4_01_4.js  classjsonv_1_1detail_1_1adapter__builder__dsl.html  classjsonv_1_1detail_1_1basic__owner.html  classjsonv_1_1detail_1_1basic__view-members.html  classjsonv_1_1detail_1_1basic__view.html  classjsonv_1_1detail_1_1member__adapter-members.html  classjsonv_1_1detail_1_1member__adapter.html  classjsonv_1_1detail_1_1member__adapter__impl.html  classjsonv_1_1detail_1_1scope__exit__invoker.html  classjsonv_1_1detail_1_1string__view.js  classjsonv_1_1encoder.html  classjsonv_1_1enum__adapter.html  classjsonv_1_1enum__adapter.js  classjsonv_1_1extraction__context.html  classjsonv_1_1extraction__error-members.html  classjsonv_1_1extractor.js  classjsonv_1_1extractor__construction.html  classjsonv_1_1formats-members.html  classjsonv_1_1formats.html  classjsonv_1_1formats.js  classjsonv_1_1formats__builder.html  classjsonv_1_1formats__builder.js  classjsonv_1_1function__adapter.html  classjsonv_1_1function__serializer-members.html  classjsonv_1_1function__serializer.html  classjsonv_1_1kind__error.html  classjsonv_1_1member__adapter__builder-members.html  classjsonv_1_1member__adapter__builder.html  classjsonv_1_1merge__rules.html  classjsonv_1_1no__extractor.html  classjsonv_1_1optional__adapter.html  classjsonv_1_1ostream__encoder.html  classjsonv_1_1parse__error.html  (+63 more)
version/1.2.0/: algorithm_8hpp_source.html  classjsonv_1_1adapter__for.html  classjsonv_1_1container__adapter.html  classjsonv_1_1context__base-members.html  classjsonv_1_1context__base.html  classjsonv_1_1detail_1_1formats__builder__dsl-members.html  coerce_8hpp.html  (+73 more)
(+498 files in other folders)
